# imperial_coldfront_plugin

./: .codespell_ignore.txt  .pre-commit-config.yaml  README.md  dev-requirements.txt  doc-requirements.txt  makemigrations.py  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: check-links.yml  ci.yml  docs.yml  upgrade-dependencies.yml
docs/: gen_ref_nav.py  overview.md
imperial_coldfront_plugin/: __init__.py  _mypy_settings.py  acl.py  admin.py  apps.py  dart.py  email_reporter.py  emails.py  forms.py  gid.py  gpfs_client.py  ldap.py  microsoft_graph_client.py  models.py  oidc.py  policy.py  settings.py  settings_validation.py  signals.py  tasks.py  units.py  urls.py  utils.py  views.py
imperial_coldfront_plugin/management/commands/: prune_groups.py
imperial_coldfront_plugin/migrations/: 0001_add_rdf_resource_rdf_project_attribute_dart_id_attribute.py  0001_initial.py  0002_schedule_ldap_consistency_check.py  0002_unixuid.py  0002_userid.py  0003_remove_groupmembership_owner_researchgroup_and_more.py  0003_schedule_update_quota_usages.py  0004_add_gid_attribute.py  0004_alter_groupmembership_member_alter_unixuid_user.py  0004_groupmembership_is_manager.py  0005_add_files_quota_attribute.py  0005_groupmembership_is_manager.py  0005_merge_20250116_1318.py  0006_add_storage_quota_tb_attribute.py  0006_groupmembership_expiration.py  0007_add_shortname_attribute.py  0007_auto_20250123_1547.py  0007_groupmembership_pruning.py  0008_alter_groupmembership_member.py  0008_project_attributes.py  0009_allocation_location_attribute.py  0009_schedule_expiry_notification.py  0010_allocation_ticket_attribute.py  0010_auto_20250228_1431.py  0011_auto_20250401_1022.py  0011_initial.py  0012_auto_20260128_1136.py  0012_delete_unixuid.py  0012_schedule_rdf_allocation_expiry.py  0013_add_deleted_and_removed_status.py  0013_add_gid.py  0013_auto_20250508_1115.py  0013_auto_20260202_1054.py  0014_add_gid.py  0014_auto_20250508_2158.py  0014_merge_20260202_1119.py  0014_remove_researchgroup_owner_delete_groupmembership_and_more.py  0014_schedule_allocation_status_check.py  0015_add_gid.py  0015_schedule_allocation_quota_expiry.py  (+14 more)
imperial_coldfront_plugin/templates/: group_members.html  no_group.html  research_group_terms.html
imperial_coldfront_plugin/templates/imperial_coldfront_plugin/: accept_group_invite.html  accept_invite.html  add_to_group.html  add_to_group_confirm.html  admin_project_creation_form.html  allocation_add_users.html  allocation_task_result.html  check_access.html  credit_transaction_form.html  dart_id_form.html  departments_list.html  eligible_pi.html  existing_hx2_allocation.html  extend_membership.html  group_menu.html  home.html  hx2_allocation_self_creation.html  hx_allocation_form.html  hx_allocation_task_result.html  index.html  invite_sent.html  invite_to_group.html  member_terms_and_conditions.html  navbar_request.html  project_add_user_search_results.html  project_creation_form.html  project_credit_transactions.html  rdf_allocation_form.html  research_group_terms.html  send_group_invite.html  task_list.html  user_search.html
imperial_coldfront_plugin/templates/imperial_coldfront_plugin/overrides/: allocation_add_users.html  allocation_detail.html  allocation_list.html  allocation_remove_users.html  authorized_home.html  authorized_navbar.html  navbar_admin.html  navbar_brand.html  nonauthorized_home.html  nonauthorized_navbar.html  project_add_users.html  project_add_users.js.html  project_detail.html  project_list.html  project_user_detail.html
imperial_coldfront_plugin/templatetags/: allocation-days.py  allocation_days.py  home_tags.py  navbar_tags.py  projects.py  shortname.py
tests/: conftest.py  test_acl.py  test_commands.py  test_emails.py  test_forms.py  test_gid.py  test_gpfs.py  test_gpfs_client.py  test_imperial_coldfront_plugin.py  test_ldap.py  test_microsoft_graph_client.py  test_models.py  test_policy.py  test_settings_validation.py  test_signals.py  test_tasks.py  test_templatetags.py  test_utils.py  test_views.py  urls.py
tests/templates/common/: base.html
