[project]
name = "imperial_coldfront_plugin"
version = "0.1.0"
description = "A plugin for the Coldfront HPC management platform."
authors = [
    { name = "Christopher Cave-Ayland", email = "c.cave-ayland@imperial.ac.uk" },
    { name = "Imperial College London RSE Team", email = "ict-rse-team@imperial.ac.uk" },
]
requires-python = "~=3.11"
dependencies = [
    "coldfront==v1.1.6",
    "django",
    "mozilla_django_oidc",
    "django-stubs-ext",
    "requests",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "pytest-mock",
    "pytest-django",
    "django-stubs",
]
doc = [
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
    "htmlcov",
] # Exclude the coverage report file from setuptools package finder

[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/", "docs/"]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["mozilla_django_oidc.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["imperial_coldfront_plugin.oidc"]
disallow_any_explicit = false

[tool.pytest.ini_options]
addopts = "-v -p no:warnings --cov=imperial_coldfront_plugin --cov-report=html --doctest-modules --ignore=docs --ignore=makemigrations.py"

[tool.ruff]
exclude = ["*/migrations"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",
    "D104",
] # Missing docstring in public module, Missing docstring in public package

[tool.django-stubs]
django_settings_module = "imperial_coldfront_plugin" # a lie but seems to satisfy
