[project]
name = "imperial_coldfront_plugin"
version = "0.1.0"
description = "A plugin for the Coldfront HPC management platform."
authors = [
    { name = "Christopher Cave-Ayland", email = "c.cave-ayland@imperial.ac.uk" },
    { name = "Imperial College London RSE Team", email = "ict-rse-team@imperial.ac.uk" },
]
requires-python = "~=3.11"
dependencies = [
    "coldfront==v1.1.6",
    "django",
    "mozilla_django_oidc",
    "django-stubs-ext",
    "requests",
    "uplink",
    "ldap3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "pytest-mock",
    "pytest-django",
    "django-stubs",
    "types-requests",
    "types-ldap3",
    "beautifulsoup4",
]
doc = [
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
    "htmlcov",
] # Exclude the coverage report file from setuptools package finder

[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/", "docs/", "migrations/", "site/"]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "mozilla_django_oidc.*",
  "coldfront.*",
  "django_q.*",
  "uplink.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["imperial_coldfront_plugin.forms"]
disallow_any_explicit = false

[tool.pytest.ini_options]
addopts = [
    "-v",
    "-p",
    "no:warnings",
    "--cov=imperial_coldfront_plugin",
    "--cov-report=html",
    "--doctest-modules",
    "--ignore=docs",
    "--ignore=site",
    "--ignore=makemigrations.py",
    "--ignore=imperial_coldfront_plugin/migrations",
    "--mypy",
]

[tool.ruff]
exclude = ["*/migrations"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",
    "D104",
] # Missing docstring in public module, Missing docstring in public package

[tool.djlint]
profile = "django"
indent = 2
ignore = "H021"
extend_exclude = "imperial_coldfront_plugin/templates/imperial_coldfront_plugin/overrides/*"

[tool.django-stubs]
# use a dummy settings module that ensures we get all of the coldfront and plugin
# settings together
django_settings_module = "imperial_coldfront_plugin._mypy_settings"
